added Apartment model and discovering how to connect Playwright with HtmlAgilityPack for efficent automation parsing

--- a/Playwright-Scraper/Playwright-Scraper.csproj
+++ b/Playwright-Scraper/Playwright-Scraper.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Microsoft.Playwright" Version="1.21.0" />
   </ItemGroup>
 
